--- a/src/ToolBelt.iOS/ToolBelt.iOS.csproj
+++ b/src/ToolBelt.iOS/ToolBelt.iOS.csproj
@@ -68,6 +68,7 @@
     <Compile Include="iOSInitializer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\ExtendedDatePickerRenderer.cs" />
     <Compile Include="Renderers\ExtendedEntryRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
