--- a/src/ToolBelt/ToolBelt.csproj
+++ b/src/ToolBelt/ToolBelt.csproj
@@ -53,6 +53,9 @@
     <EmbeddedResource Update="Views\About\AboutUsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Authentication\Registration\BasicInformationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Cells\ProjectSummaryCellView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
