Begin adding the trade specialty selection page.
Refs #6

--- a/src/ToolBelt/ToolBelt.csproj
+++ b/src/ToolBelt/ToolBelt.csproj
@@ -56,6 +56,9 @@
     <EmbeddedResource Update="Views\Authentication\Registration\BasicInformationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Authentication\Registration\TradeSpecialtiesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Cells\ProjectSummaryCellView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
