--- a/src/ToolBelt.Android/ToolBelt.Android.csproj
+++ b/src/ToolBelt.Android/ToolBelt.Android.csproj
@@ -60,6 +60,9 @@
     <PackageReference Include="Prism.Forms" Version="7.0.0.396" />
     <PackageReference Include="ReactiveUI.Events.XamForms" Version="8.7.2" />
     <PackageReference Include="ReactiveUI.XamForms" Version="8.7.2" />
+    <PackageReference Include="System.ComponentModel.Annotations">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Auth" Version="1.6.0.2" />
