--- a/src/ToolBelt.iOS/ToolBelt.iOS.csproj
+++ b/src/ToolBelt.iOS/ToolBelt.iOS.csproj
@@ -156,6 +156,9 @@
     <PackageReference Include="ReactiveUI.XamForms">
       <Version>8.7.2</Version>
     </PackageReference>
+    <PackageReference Include="System.ComponentModel.Annotations">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
     </PackageReference>
